Changed package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "jomos/senang-pay",
+  "name": "tajulsharby/senangpay",
   "description": "This package will provide facade and easy integration with SenangPay payment gateway.",
   "license": "MIT",
   "keywords": [
